--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Arizonia|Raleway:300,400,500,600,800" media="none" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="dist/css/main.css" media="none" onload="if(media!='all')media='all'">
 </head>
 <body>
@@ -28,8 +25,6 @@
             <span class="page-header__span"></span>
         </div>
     </button>
-
-
     <div class="container">
         <h1 class="page-header__heading">Paweł Chyła</h1>
         <p class="page-header__subheading">front-end developer</p>
@@ -363,8 +358,8 @@
 </footer>
 
 
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-<script src="dist/js/script.js"></script>
+<script async defer src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script>window.jQuery || document.write('<script src="app/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+<script async defer src="dist/js/script.js"></script>
 </body>
 </html>
