--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
 
 <script async defer src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="app/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script async defer src="app/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 <script async defer src="dist/js/script.js"></script>
 </body>
 </html>
