--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="works__item-container">
                 <img src="dist/img/works/optopol.jpg" class="works__image" alt="">
 
-                <div class="work__item-content">
+                <div class="works__item-content">
                     <h3 class="works__name">OPTOPOL</h3>
                     <p class="works__subheading">Technologie:</p>
                     <p class="works__tech-list">
@@ -240,7 +240,7 @@
             <div class="works__item-container">
                 <img src="dist/img/works/inwave.jpg" class="works__image" alt="">
 
-                <div class="work__item-content">
+                <div class="works__item-content">
                     <h3 class="works__name">INWAVE</h3>
                     <p class="works__subheading">Technologie:</p>
                     <p class="works__tech-list">
@@ -253,7 +253,7 @@
 
             <div class="works__item-container">
                 <img src="dist/img/works/salamandra.jpg" class="works__image" alt="">
-                <div class="work__item-content">
+                <div class="works__item-content">
                     <h3 class="works__name">INSTYTUT SALAMANDRA</h3>
                     <p class="works__subheading">Technologie:</p>
                     <p class="works__tech-list">
@@ -266,7 +266,7 @@
 
             <div class="works__item-container">
                 <img src="dist/img/works/stodola.jpg" class="works__image" alt="">
-                <div class="work__item-content">
+                <div class="works__item-content">
                     <h3 class="works__name">NOWOCZESNA STODOLA</h3>
                     <p class="works__subheading">Technologie:</p>
                     <p class="works__tech-list">
@@ -279,7 +279,7 @@
 
             <div class="works__item-container">
                 <img src="dist/img/works/onwelo.jpg" class="works__image" alt="">
-                <div class="work__item-content">
+                <div class="works__item-content">
                     <h3 class="works__name">ONWELO</h3>
                     <p class="works__subheading">Technologie:</p>
                     <p class="works__tech-list">
@@ -357,9 +357,10 @@
     </div>
 </footer>
 
-
-<script async defer src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script async defer src="app/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-<script async defer src="dist/js/script.js"></script>
+<script  src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+<script  src="dist/js/script.js"></script>
 </body>
 </html>
