--- a/index.html
+++ b/index.html
@@ -87,19 +87,17 @@
                 <img src="dist/img/me.jpg" class="about-me__photo" alt="Paweł Chyła photo">
                 <div class="about-me__text-container">
                     <p class="about-me__text-lead">
-                        Witam, mam na imię Paweł i jestem front-end developerem. Swoją przygodę zawodową rozpocząłem stażem zawodowym, który pozwolił
-                        mi zapoznać się z takimi technologiami jak Html5, Css3, Javascript, Php (framework Zend 1). Po zakończeniu
-                        stażu postanowiłem się na front-end i dalej rozwijać się w tym kierunku. Aktualnie cały
-                        czas szlifuje Javascript(ES6,) oraz uczę się frameworka React wraz z jego całym ekosystemem (redux,
-                        react-router, redux-thunk). Podczas nauki reacta wykorzystuje składnie ES6, którą następnie transpiluje
-                        przy pomocy babel, oraz bundluje za pomocą webpacka.
+                        Witam, mam na imię Paweł i jestem front-end developerem. Przygodę z programowanie rozpocząłem na początku 2016 roku stażem
+                        w firmie Inwave. Podczas stażu miałem możliwość pracy z Html 5, Css 3 oraz technologiami backendowymi
+                        Php, Zend Framework. Po stażu zostałem zatrudniony jako frontend developer i zacząłem naukę javascript
+                        na początku ES5 a trochę później ES6. Na co dzień zajmuję się programowanie warstwy wizualnej stron
+                        internetowych. Wykorzystuje takie narzędzia jak: Html 5, Css 3, Sass, Javascript, Jquery, Gulp, biblioteki
+                        javascriptowe takie jak: Magnific Popup, Flickity, Packery itp. Od wakacji uczę się Reacta wraz z
+                        całym ekosystemem (React Router, Redux, Redux-thunk). Wiedzę z Reacta wykorzystuje przy budowie aplikacji
+                        Quiz Designer - którą buduję wraz z kilkoma znajomymi programistami. Quiz Designer to aplikacja open
+                        source służąca do projektowania i przeprowadzania quizów. Aplikacja wykorzystuje na froncie React
+                        + Redux a za warstwę backendową Node / Express + MongoDb.
                     </p>
-                    <p>
-                        Jeśli chodzi o mnie jestem osobą ambitną, cierpliwą, wytrwale dążącą do celu. Uwielbiam uczyć się nowych rzeczy i chciałbym
-                        stale doskonalić swoje umiejętności i poznawać dobre praktyki programując w zespole bardziej doświadczonych programistów. Lubie poznawać
-                        nowych ludzi a praca zespołowa sprawa mi przyjemność. Jestem osobą kontaktową i bezkonfliktową.
-                    </p>
-
                     <div class="about-me__btn-outer">
                         <a href="cv.pdf" download="cv.pdf" class="btn">
                             <span class="btn__icon fa fa-download"></span>
@@ -127,35 +125,25 @@
 
 
                     <div class="resume__item item item--right">
-                        <p class="item__heading">Junior webdeveloper</p>
+                        <p class="item__heading">Frontend Developer</p>
                         <p class="item__subheading">
                             <span class="item__company-name">Inwave Interactive</span> 2016.11 - Do teraz
                         </p>
                         <p class="item__text">
-                            W Inwave Interactive pracuje od połowy listopada 2016 roku. Zajmuje się tam cięciem szablonów psd do kodu html/css/js. Wykorzystuje
-                            do tego sematyczne znaczniki z Html5 wraz preprocesor css - Sass - którego kompiluje do kodu
-                            css przy pomocu gulpa, wykorzystuje także jQuery do nadania stronie większej interaktywności. Na codzień używam takich narzędzi jak : Bower , Npm, Webstorm, Git, Bitbucket
+                            Do moich codziennych obowiązków należy przekładanie projektu grafika na w pełni funkcjonalną statyczną stronę internetową.
+                            Strukturę strony tworzę przy pomocy Html 5 oraz jego semantycznych znaczników. Stylując stronę
+                            używam preprocesora Sass oraz metodologii BEM do podziału elemntów na re używalne bloki. Wszelki
+                            interakcję dodaje przy pomocy Jquery a ostatnio staram się używać tylko ES6.
                         </p>
                     </div>
                     <div class="resume__item item item--left">
-                        <p class="item__heading">Stażysta </p>
+                        <p class="item__heading">Stażysta</p>
                         <p class="item__subheading">
                             <span class="item__company-name">Inwave Interactive</span> 2016.02 - 2016.11
                         </p>
                         <p class="item__text">
-                            Podczas stażu, przez okres pół roku poznałem technologie służące do budowy nowoczesnych witryn internetowych. Swoją przygodę
-                            jako webdeveloper rozocząłem od praktycznej nauki Html i Css poprzez ci cięcie szablonów psd,
-                            jednak nie były to projekty komercyjne. Po opanowaniu podstaw front endu przyszedł czas na Php
-                            i Mysql. Po nauczeniu się podstaw Php zostałem wprowadzony we framework Zend 1 i wykonałem przy
-                            jego pomocy kompletny backend bloga.
-                        </p>
-                    </div>
-                    <div class="resume__item item item--right item--right-v2">
-                        <p class="item__heading">Pracownik administracyjny</p>
-                        <p class="item__subheading">Urząd gminy w Radomyślu nad Sanem</p>
-                        <p class="item__text">
-                            Jako pracownik administracyjny pracowałem w urzędzie gminy w Radomyślu nad Sanem przez okres około 2 lat z przerwami. Zajmowałem
-                            się tam obsługą interesantów, odbieraniem telefonów i faksów,obsługą kserokopiarki.
+                            Przez okres stażu głównie zajmowałem się szlifowanie moich umiejętności. Na początek zakodowałem darmowy templete przy pomocy
+                            Html 5 i Css3. Następnie zacząłem naukę Php aby móc programować autorskiego cms-a.
                         </p>
                     </div>
                 </div>
@@ -178,7 +166,7 @@
                             <span class="item__company-name-left">2009 - 2012</span>
                         </p>
                         <p class="item__text">
-                            Trzyletnie studnia licencjackie na kierunku administracja
+                            Studia licencjackie na kierunku administracja
                         </p>
                     </div>
 
@@ -187,7 +175,7 @@
                         <p class="item__subheading">
                             <span class="item__company-name">Zespół Szkół Nr 4 w Stalowej Woli</span> 2004 - 2007</p>
                         <p class="item__text item__text--left">
-                            Trzyletnie liceum ogólnokształconce o profilu integracja europejska.
+                            Liceum ogólnokształcące o profilu integracja europejska.
                         </p>
                     </div>
 
@@ -216,7 +204,7 @@
                             HTML5, CSS3, SASS, JQuery, ScrollMagic, GSAP, BxSlider, packery
                         </p>
                         <p class="works__subheading">Online</p>
-                        <a href="http://optopol.com/" class="works__link" target="_blank">new.optopol.com.pl</a>
+                        <a href="http://optopol.com/" class="works__link" target="_blank">optopol.com</a>
 
                     </div>
                 </div>
@@ -244,7 +232,7 @@
                             HTML5, CSS3, SASS, Bootstrap, Jquery
                         </p>
                         <p class="works__subheading">Online</p>
-                        <a href="http://instytutsalamandra.pl" class="works__link" target="_blank">instytutsalamandra.pl</a>
+                        <a href="http://fqs.pl" class="works__link" target="_blank">fqs.pl</a>
                     </div>
                 </div>
 
@@ -275,17 +263,17 @@
                 </div>
 
                 <div class="works__item-container reverse">
-                        <img src="dist/img/works/eris-conceptstore.png" class="works__image" alt="">
-                        <div class="works__item-content">
-                            <h3 class="works__name">Dr Irena Eris - Concept Store</h3>
-                            <p class="works__subheading">Technologie:</p>
-                            <p class="works__tech-list">
-                                HTML5, CSS3, SASS, Bootstrap, Jquery, Animate.css, Waypoints.js
-                            </p>
-                            <p class="works__subheading">Online</p>
-                            <a href="http://drirenaeris.com/conceptstore" class="works__link" target="_blank">drirenaeris.com/conceptstore</a>
-                        </div>
+                    <img src="dist/img/works/eris-conceptstore.png" class="works__image" alt="">
+                    <div class="works__item-content">
+                        <h3 class="works__name">Dr Irena Eris - Concept Store</h3>
+                        <p class="works__subheading">Technologie:</p>
+                        <p class="works__tech-list">
+                            HTML5, CSS3, SASS, Bootstrap, Jquery, Animate.css, Waypoints.js
+                        </p>
+                        <p class="works__subheading">Online</p>
+                        <a href="http://drirenaeris.com/conceptstore" class="works__link" target="_blank">drirenaeris.com/conceptstore</a>
                     </div>
+                </div>
 
 
             </div>
@@ -295,7 +283,21 @@
         <div class="container">
             <h2 class="main-heading resume__heading">Kontakt</h2>
             <div class="contact__address-data data">
-                <a href="mailto:chyla1988@gmail.com" class="data__item">
+                <a href="tel:574139522" class="data__item data__item--first">
+                    <div class="data__icon-container data__icon-container--first">
+                        <span class="data__icon fa fa-phone" aria-hidden="true"></span>
+
+                    </div>
+
+                    <div class="data__text">
+                        <p class="data__heading">Telefon</p>
+                        <div class="data__content">
+                            574139522
+                        </div>
+                    </div>
+                </a>
+
+                <a href="mailto:kontakt@pawelchyla.pl" class="data__item">
                     <div class="data__icon-container data__icon-container--secend">
                         <span class="data__icon fa fa-envelope" aria-hidden="true"></span>
                     </div>
@@ -303,13 +305,13 @@
                     <div class="data__text">
                         <p class="data__heading">E-mail</p>
                         <div class="data__content">
-                            chyla1988@gmail.com
+                            kontakt@pawelchyla.pl
                         </div>
                     </div>
                 </a>
             </div>
 
-            <form action="https://formspree.io/chyla1988@gmail.com" class="form" method="POST">
+            <form action="https://formspree.io/kontakt@pawelchyla.pl" class="form" method="POST">
                 <div class="form__group">
                     <input type="text" name="name" class="form__input form__input--float form__input--float--first " placeholder="Imię i nazwisko">
                     <input type="text" name="email" class="form__input form__input--float" placeholder="Adres e-mail">
